--- a/note/css/01.md
+++ b/note/css/01.md
@@ -352,3 +352,351 @@ vertical-align: middle;
 （4）利用绝对定位，先将元素的左上角通过 top:50%和 left:50%定位到页面的中心，然后再\通过 translate 来调整元素的中心点到页面的中心。
 
 （5）使用 flex 布局，通过 align-items:center 和 justify-content:center 设置容器的垂直和水平方向上为居中对齐，然后它的子元素也可以实现垂直和水平的居中。对于宽高不定的元素，上面的后面两种方法，可以实现元素的垂直和水平的居中。
+
+## display 有哪些值？说明他们的作用
+
+block 块类型。默认宽度为父元素宽度，可设置宽高，换行显示。
+
+none 元素不显示，并从文档流中移除。
+
+inline 行内元素类型。默认宽度为内容宽度，不可设置宽高，同行显示。
+
+inline-block 默认宽度为内容宽度，可以设置宽高，同行显示。
+
+list-item 像块类型元素一样显示，并添加样式列表标记。
+
+table 此元素会作为块级表格来显示。
+
+inherit 规定应该从父元素继承 display 属性的值。
+
+## position 值 relative 和 absolute 定位原点
+
+相关知识点：
+
+absolute 生成绝对定位的元素，相对于值**不为 static 的第一个父元素的 paddingbox 进行定位**，也可以理解为**离自己这一级元素最近的一级 position 设置为 absolute 或者 relative 的父元素的 paddingbox 的左上角为原点的**。
+
+fixed（老 IE 不支持）生成绝对定位的元素，相对于**浏览器窗口**进行定位。
+
+relative 生成相对定位的元素，相对于其**元素本身**所在正常位置进行定位。
+
+static 默认值。**没有定位**，元素出现在正常的流中（忽略 top,bottom,left,right,z-index 声明）。
+
+inherit 规定从父元素继承 position 属性的值。
+
+回答：
+
+relative 定位的元素，是相对于元素本身的正常位置来进行定位的。
+
+absolute 定位的元素，是相对于它的第一个 position 值不为 static 的祖先元素的 paddingbox 来进行定位的。这句话我们可以这样来理解，我们首先需要找到绝对定位元素的一个 position 的值不为 static 的祖先元素，然后相对于这个祖先元素的 paddingbox 来定位，也就是说在计算定位距离的时候，**padding 的值也要算进去**。
+
+## CSS3 有哪些新特性？
+
+新增各种 CSS 选择器 （:not(.input)：所有 class 不是“input”的节点）
+
+圆角 （border-radius:8px）
+
+多列布局 （multi-columnlayout）
+
+阴影和反射 （Shadow\Reflect）
+
+文字特效 （text-shadow）
+
+文字渲染 （Text-decoration）
+
+线性渐变 （gradient）
+
+旋转 （transform）
+
+缩放，定位，倾斜，动画，多背景
+
+例如：`transform:\scale(0.85,0.90)\translate(0px,-30px)\skew(-9deg,0deg)\Animation;`
+
+## CSS3 的 Flexbox（弹性盒布局模型），以及适用场景？
+
+相关知识点：
+
+Flex 是 FlexibleBox 的缩写，意为"弹性布局"，用来为盒状模型提供最大的灵活性。任何一个容器都可以指定为 Flex 布局。行内元素也可以使用 Flex 布局。注意，**设为 Flex 布局以后，子元素的 float、clear 和 vertical-align 属性将失效**。
+
+采用 Flex 布局的元素，称为 Flex 容器（flexcontainer），简称"容器"。它的所有子元素自动成为容器成员，称为 Flex 项目（flexitem），简称"项目"。
+
+容器默认存在两根轴：水平的主轴（mainaxis）和垂直的交叉轴（crossaxis），项目默认沿主轴排列。
+
+以下 6 个属性**设置在容器**上。
+
+flex-direction 属性决定主轴的方向（即项目的排列方向）。
+
+flex-wrap 属性定义，如果一条轴线排不下，如何换行。
+
+flex-flow 属性是 flex-direction 属性和 flex-wrap 属性的简写形式，默认值为 rownowrap。
+
+justify-content 属性定义了项目在主轴上的对齐方式。
+
+align-items 属性定义项目在交叉轴上如何对齐。
+
+align-content 属性定义了多根轴线的对齐方式。如果项目只有一根轴线，该属性不起作用。
+
+以下 6 个属性**设置在项目**上。
+
+order 属性定义项目的排列顺序。数值越小，排列越靠前，默认为 0。
+
+flex-grow 属性定义项目的放大比例，默认为 0，即如果存在剩余空间，也不放大。
+
+flex-shrink 属性定义了项目的缩小比例，默认为 1，即如果空间不足，该项目将缩小。
+
+flex-basis 属性定义了在分配多余空间之前，项目占据的主轴空间。浏览器根据这个属性，计算主轴是否有多余空间。它的默认值为 auto，即项目的本来大小。
+
+flex 属性是 flex-grow，flex-shrink 和 flex-basis 的简写，默认值为 01auto。
+
+align-self 属性允许单个项目有与其他项目不一样的对齐方式，可覆盖 align-items 属性。默认值为 auto，表示继承父元素的 align-items 属性，如果没有父元素，则等同于 stretch。
+
+回答：
+
+flex 布局是 CSS3 新增的一种布局方式，我们可以通过将一个元素的 display 属性值设置为 flex 从而使它成为一个 flex 容器，它的所有子元素都会成为它的项目。
+
+一个容器默认有两条轴，一个是水平的主轴，一个是与主轴垂直的交叉轴。我们可以使用 flex-direction 来指定主轴的方向。
+
+我们可以使用 justify-content 来指定元素在主轴上的排列方式，使用 align-items 来指定元素在交叉轴上的排列方式。还可以使用 flex-wrap 来规定当一行排列不下时的换行方式。
+
+对于容器中的项目，我们可以使用 order 属性来指定项目的排列顺序，还可以使用 flex-grow 来指定当排列空间有剩余的时候，项目的放大比例。还可以使用 flex-shrink 来指定当排列空间不足时，项目的缩小比例。
+
+## 用纯 CSS 创建一个三角形的原理
+
+采用的是相邻边框连接处的均分原理。
+
+将元素的宽高设为 0，只设置 border，把任意三条边隐藏掉（颜色设为 transparent），剩下的就是一个三角形。
+
+```css
+#demo {
+  width: 0;
+  height: 0;
+  border-width: 20px;
+  border-style: solid;
+  border-color: transparenttransparentredtransparent;
+}
+```
+
+## 一个满屏品字布局设计
+
+简单的方式：上面的 div 宽 100%，下面的两个 div 分别宽 50%，然后用 float 或者 inline 使其不换行即可
+
+## CSS 多列等高实现
+
+（1）利用 padding-bottom|margin-bottom **正负值相抵**，不会影响页面布局的特点。设置父容器设置超出隐藏（overflow:hidden），这样父容器的高度就还是它里面的列没有设定 padding-bottom 时的高度，当它里面的任一列高度增加了，则父容器的高度被撑到里面最高那列的高度，其他比这列矮的列会用它们的 padding-bottom 补偿这部分高度差。
+
+（2）利用 **table-cell 所有单元格高度都相等**的特性，来实现多列等高。
+
+（3）利用 **flex **布局中项目 align-items 属性默认为 stretch，如果项目未设置高度或设为 auto，将占满整个容器的高度的特性，来实现多列等高。
+
+## 经常遇到的浏览器的兼容性有哪些？原因和解决方法是什么，常用 hack 的技巧
+
+（1）png24 位的图片在 iE6 浏览器上出现背景
+
+解决方案：做成 PNG8，也可以引用一段脚本处理。
+
+（2）浏览器默认的 margin 和 padding 不同
+
+解决方案：加一个全局的`*{margin:0;padding:0;}`来统一。
+
+（3）IE6 双边距 bug：在 IE6 下，如果对元素设置了浮动，同时又设置了 margin-left 或 margin-right，margin 值会加倍。
+
+`#box{float:left;width:10px;margin:00010px;}`
+
+这种情况之下 IE 会产生 20px 的距离
+
+解决方案：在 float 的标签样式控制中加入`_display:inline;`将其转化为行内属性。(\_这个符号只有 ie6 会识别)
+
+（4）渐进识别的方式，从总体中逐渐排除局部。
+
+首先，巧妙的使用`"\9"`这一标记，将 IE 游览器从所有情况中分离出来。接着，再次使用"+"将 IE8 和 IE7、IE6 分离开来，这样 IE8 已经独立识别。
+
+```css
+.bb {
+  background-color: #f1ee18; /*所有识别*/
+  .background-color: #00deff\9; /*IE6、7、8 识别*/
+  +background-color: #a200ff; /*IE6、7 识别*/
+  _background-color: #1e0bd1; /*IE6 识别*/
+}
+```
+
+（5）IE 下，可以使用获取常规属性的方法来获取自定义属性，也可以使用 getAttribute()获取自定义属性；Firefox 下，只能使用 getAttribute()获取自定义属性
+
+解决方法：统一通过 getAttribute()获取自定义属性。
+
+（6）IE 下，event 对象有 x、y 属性，但是没有 pageX、pageY 属性;Firefox 下，event 对象有 pageX、pageY 属性，但是没有 x、y 属性。
+
+解决方法：（条件注释）缺点是在 IE 浏览器下可能会增加额外的 HTTP 请求数。
+
+（7）Chrome 中文界面下默认会将小于 12px 的文本强制按照 12px 显示
+
+解决方法： 1.可通过加入 CSS 属性`-webkit-text-size-adjust:none;`解决。但是，在 chrome 更新到 27 版本之后就不可以用了。 2.还可以使`-webkit-transform:scale(0.5);`注意`-webkit-transform:scale(0.75);`收缩的是整个 span 的大小，这时候，必须要将 span 转换成块元素，以使用 `display：block/inline-block/...；`
+
+（8）超链接访问过后 hover 样式就不出现了，被点击访问过的超链接样式不再具有 hover 和 active 了
+
+解决方法：**改变 CSS 属性的排列顺序 L-V-H-A**
+
+（9）怪异模式问题：漏写 DTD 声明，Firefox 仍然会按照标准模式来解析网页，但在 IE 中会触发怪异模式。为避免怪异模式给我们带来不必要的麻烦，最好**养成书写 DTD 声明的好习惯**。
+
+## li 与 li 之间有看不见的空白间隔是什么原因引起的？有什么解决
+
+浏览器会把 inline 元素间的空白字符（空格、换行、Tab 等）渲染成一个空格。而为了美观。我们通常是一个`<li>`放在一行，这导致`<li>`换行后产生换行字符，它变成一个空格，占用了一个字符的宽度。
+
+解决办法：
+
+（1）为`<li>`设置 `float:left`。不足：有些容器是不能设置浮动，如左右切换的焦点图等。
+
+（2）将所有`<li>`写在同一行。不足：代码不美观。
+
+（3）将`<ul>`内的字符尺寸直接设为 0，即 `font-size:0`。不足：`<ul>`中的其他字符尺寸也被设为 0，需要额外重新设定其他字符尺寸，且在 Safari 浏览器依然会出现空白间隔。
+
+（4）消除`<ul>`的字符间隔 `letter-spacing:-8px`，不足：这也设置了`<li>`内的字符间隔，因此需要将`<li>`内的字符间隔设为默认 `letter-spacing:normal`。
+
+## 为什么要初始化 CSS 样式
+
+因为浏览器的兼容问题，不同浏览器对有些标签的默认值是不同的，如果没对 CSS 初始化往往会出现浏览器之间的页面显示差异。
+
+当然，初始化样式会对 SEO 有一定的影响，但鱼和熊掌不可兼得，但力求影响最小的情况下初始化。
+
+最简单的初始化方法：`*{padding:0;margin:0;}`（强烈不建议）
+
+淘宝的样式初始化代码：
+
+```css
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+p,
+blockquote,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+pre,
+form,
+fieldset,
+legend,
+button,
+input,
+textarea,
+th,
+td {
+  margin: 0;
+  padding: 0;
+}
+body,
+button,
+input,
+select,
+textarea {
+  font: 12px/1.5tahoma, arial, \5b8b\4f53;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
+}
+address,
+cite,
+dfn,
+em,
+var {
+  font-style: normal;
+}
+code,
+kbd,
+pre,
+samp {
+  font-family: couriernew, courier, monospace;
+}
+small {
+  font-size: 12px;
+}
+ul,
+ol {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+sup {
+  vertical-align: text-top;
+}
+sub {
+  vertical-align: text-bottom;
+}
+legend {
+  color: #000;
+}
+fieldset,
+img {
+  border: 0;
+}
+button,
+input,
+select,
+textarea {
+  font-size: 100%;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+```
+
+## 什么是包含块，对于包含块的理解
+
+包含块（containingblock）就是元素用来计算和定位的一个框。
+
+（1）根元素（很多场景下可以看成是`<html>`）被称为“**初始包含块**”，其尺寸等同于浏览器可视窗口的大小。
+
+（2）对于其他元素，如果该元素的 position 是 relative 或者 static，**则“包含块”由其最近的块容器祖先盒的 contentbox 边界形成**。
+
+（3）如果元素 position:fixed，**则“包含块”是“初始包含块”**。
+
+（4）如果元素 position:absolute，**则“包含块”由最近的 position 不为 static 的祖先元素建立**
+
+具体方式如下：
+
+如果该祖先元素是纯 inline 元素，则规则略复杂：
+
+假设给内联元素的前后各生成一个宽度为 0 的内联盒子（inlinebox），则这两个内联盒子的 paddingbox 外面的包围盒就是内联元素的“包含块”；
+
+如果该内联元素被跨行分割了，那么“包含块”是未定义的，也就是 CSS2.1 规范并没有明确定义，浏览器自行发挥否则，“包含块”由该祖先的 paddingbox 边界形成。如果没有符合条件的祖先元素，则“包含块”是“初始包含块”。
+
+## CSS 的 里的 visibility 个 属性有个 collapse 属性值是干嘛用的，不同浏览 属性值是干嘛用的
+
+（1）对于一般的元素，它的表现跟 visibility：hidden;是一样的。元素是不可见的，但此时仍占用页面空间。
+
+（2）但例外的是，如果这个元素是 table 相关的元素，例如 table 行，tablegroup，table 列，tablecolumngroup，它的表现却跟 display:none 一样，也就是说，它们占用的空间也会释放。
+
+在不同浏览器下的区别：
+
+在谷歌浏览器里，使用 collapse 值和使用 hidden 值没有什么区别。
+
+在火狐浏览器、Opera 和 IE11 里，使用 collapse 值的效果就如它的字面意思：table 的行会消失，它的下面一行会补充它的位置。
+
+## width:auto 和 和 width:100%的区别
+
+一般而言width:100%会使元素 box 的宽度等于父元素的 contentbox 的宽度。width:auto 会使元素撑满整个父元素，margin、border、padding、content 区域会自动分配水平空间。
+
+## 绝对定位元素与非绝对定位元素的百分比计算的区别
+
+绝对定位元素的宽高百分比是相对于临近的 position 不为 static 的祖先元素的 paddingbox 来计算的。
+
+非绝对定位元素的宽高百分比则是相对于父元素的 contentbox 来计算的。
+
+## 简单介绍使用图片 base64 编码的优点和缺点
+
+
