算法与数据结构

--- a/note/算法与数据结构/01.md
+++ b/note/算法与数据结构/01.md
@@ -336,7 +336,7 @@ function radixSort(array) {
 }
 ```
 
-基数排序的**平均时间复杂度为 O(nk)，k 为最大元素的长度，最坏时间复杂度为O(nk)，空间复杂度为 O(n) ，是稳定 排序**
+基数排序的**平均时间复杂度为 O(nk)，k 为最大元素的长度，最坏时间复杂度为 O(nk)，空间复杂度为 O(n) ，是稳定 排序**
 
 ### 快速排序相对于其他排序效率更高的原因
 
@@ -346,63 +346,64 @@ function radixSort(array) {
 
 第一个方面是对于**比较操作的有效性来说**。对于快速排序来说，每一次元素的比较都会确定该元素在数组中的位置，也就是在 枢纽值的左边或者右边，快速排序的每一次比较操作都是有意义的结果。而对于堆排序来说，在每一次重新调整堆的时候，我 们在迭代时，已经知道上层的节点值一定比下层的节点值大，因此当我们每次为了打乱堆结构而将最后一个元素与堆顶元素互 换时，互换后的元素一定是比下层元素小的，因此我们知道比较结果却还要在堆结构调整时去进行再一次的比较，这样的比较 是没有意义的，以此在堆**排序中会产生大量的没有意义的比较操作**。
 
-第二个方面是对于**缓存局部性原理的利用上来考虑的**，我认为这应该是造成堆排序的效率不如快速排序的主要原因。在计算机 中利用了多级缓存的机制，来解决 cpu 计算速度与存储器数据读取速度间差距过大的问题。缓存的原理主要是基于局部性原 理，局部性原理简单来说就是，当前被访问过的数据，很有可能在一段时间内被再次访问，这被称为时间局部性。还有就是当 前访问的数据，那么它相邻的数据，也有可能在一段时间内被访问到，这被称为空间局部性。计算机缓存利用了局部性的原理 来对数据进行缓存，来尽可能少的减少磁盘的I/O 次数，以此来提高执行效率。对于堆排序来说，它最大的问题就是它对于 空间局部性的违背，它在进行比较时，比较的并不是相邻的元素，而是与自己相隔很远的元素，这对于利用空间局部性来进行 数据缓存的计算机来说，它的很多缓存都是无效的。并且对于大数据量的排序来说，缓存的命中率就会变得很低，因此会明显 提高磁盘的 I/O 次数，并且**由于堆排序的大量的无效比较，因此这样就造成了堆排序执行效率的低下**。而**相对来快速排序来 说，它的排序每一次都是在相邻范围内的比较，并且比较的范围越来越小，它很好的利用了局部性原理，因此它的执行效率更 高**。简单来说就是**在堆排序中获取一个元素的值所花费的时间比在快速排序获取一个元素的值所花费的时间要大**。因此我们可 以看出，**时间复杂度类似的算法，在计算机中实际执行可能会有很大的差别，因为决定算法执行效率的还有内存读取这样的其他的因素**。
+第二个方面是对于**缓存局部性原理的利用上来考虑的**，我认为这应该是造成堆排序的效率不如快速排序的主要原因。在计算机 中利用了多级缓存的机制，来解决 cpu 计算速度与存储器数据读取速度间差距过大的问题。缓存的原理主要是基于局部性原 理，局部性原理简单来说就是，当前被访问过的数据，很有可能在一段时间内被再次访问，这被称为时间局部性。还有就是当 前访问的数据，那么它相邻的数据，也有可能在一段时间内被访问到，这被称为空间局部性。计算机缓存利用了局部性的原理 来对数据进行缓存，来尽可能少的减少磁盘的 I/O 次数，以此来提高执行效率。对于堆排序来说，它最大的问题就是它对于 空间局部性的违背，它在进行比较时，比较的并不是相邻的元素，而是与自己相隔很远的元素，这对于利用空间局部性来进行 数据缓存的计算机来说，它的很多缓存都是无效的。并且对于大数据量的排序来说，缓存的命中率就会变得很低，因此会明显 提高磁盘的 I/O 次数，并且**由于堆排序的大量的无效比较，因此这样就造成了堆排序执行效率的低下**。而**相对来快速排序来 说，它的排序每一次都是在相邻范围内的比较，并且比较的范围越来越小，它很好的利用了局部性原理，因此它的执行效率更 高**。简单来说就是**在堆排序中获取一个元素的值所花费的时间比在快速排序获取一个元素的值所花费的时间要大**。因此我们可 以看出，**时间复杂度类似的算法，在计算机中实际执行可能会有很大的差别，因为决定算法执行效率的还有内存读取这样的其他的因素**。
 
 ### 系统自带排序实现
 
-每个语言的排序内部实现都是不同的。对于 JS 来说，**数组长度大于 10 会采用快排，否则使用插入排序**。选择插入排序是因为虽然时间复杂度很差，但是在数据 量很小的情况下和 O(N * logN) 相差无几，然而插入排序需要的常数时间很小，所以相对别的排序来说更快
+每个语言的排序内部实现都是不同的。对于 JS 来说，**数组长度大于 10 会采用快排，否则使用插入排序**。选择插入排序是因为虽然时间复杂度很差，但是在数据 量很小的情况下和 O(N \* logN) 相差无几，然而插入排序需要的常数时间很小，所以相对别的排序来说更快
 
 ### 稳定性
 
 稳定性的意思就是对于相同值来说，相对顺序不能改变。通俗的讲有两个相同的数 A 和 B，在排序之前 A 在 B 的前面， 而经过排序之后，B 跑到了 A 的前面，对于这种情况的发生，我们管他叫做排序的不稳定性。
 
-稳定性有什么意义？个人理解对于前端来说，比如我们熟知框架中的虚拟 DOM的比较，我们对一个 `<ul>`列表进行渲染， 当数据改变后需要比较变化时，不稳定排序或操作将会使本身不需要变化的东西变化，导致重新渲染，带来性能的损耗。
+稳定性有什么意义？个人理解对于前端来说，比如我们熟知框架中的虚拟 DOM 的比较，我们对一个 `<ul>`列表进行渲染， 当数据改变后需要比较变化时，不稳定排序或操作将会使本身不需要变化的东西变化，导致重新渲染，带来性能的损耗。
 
 ### 一些排序面试题目
 
-+ 快速排序**在完全无序的情况下效果最好**，时间复杂度为 O(nlogn)，在有序情况下效果最差，时间复杂度为 O(n^2)。
-+ **初始数据集的排列顺序对算法的性能无影响的有堆排序，直接选择排序，归并排序，基数排序**
-+ 合并 m 个长度为 n 的已排序数组的时间复杂度为 O(nmlogm)
-+ **外部排序常用的算法是归并排序**。
-+ 数组元素基本有序的情况下，插入排序效果最好，因为这样只需要比较大小，不需要移动，时间复杂度趋近于 O(n)
-+ 如果只想得到 1000 个元素组成的序列中第 5 个最小元素之前的部分排序的序列，用堆排序方法最快
-+ 插入排序和优化后的冒泡在最优情况（有序）都只用比较 n-1 次
-+ 对长度为 n 的线性表作快速排序，在最坏情况下，比较次数为 `n(n-1)/2`。
-+ 下标从 1 开始，在含有 n 个关键字的小根堆（堆顶元素最小）中，关键字最大的记录有可能存储在 `[n/2]+2` 位置上。 因为小根堆中最大的数一定是放在叶子节点上，堆本身是个完全二叉树，完全二叉树的叶子节点的位置大于 `[n/2]`
-+ 拓扑排序的算法，每次都选择入度为 0 的结点从图中删去，并从图中删除该顶点和所有以它为起点的有向边。
-+ 任何一个基于"比较"的内部排序的算法，若对 n 个元素进行排序，则在最坏情况下所需的比较次数 k 满足 `2^k > n!`， 时间下界为 `O(nlogn)`
-+ m 个元素 k 路归并的归并趟数 `s=logk(m)`，代入数据：`logk(100)≦3`
-+ 对 n 个记录的线性表进行快速排序为减少算法的递归深度，每次分区后，先处理较短的部分
-+ 在用邻接表表示图时，拓扑排序算法时间复杂度为 O(n+e)
+- 快速排序**在完全无序的情况下效果最好**，时间复杂度为 O(nlogn)，在有序情况下效果最差，时间复杂度为 O(n^2)。
+- **初始数据集的排列顺序对算法的性能无影响的有堆排序，直接选择排序，归并排序，基数排序**
+- 合并 m 个长度为 n 的已排序数组的时间复杂度为 O(nmlogm)
+- **外部排序常用的算法是归并排序**。
+- 数组元素基本有序的情况下，插入排序效果最好，因为这样只需要比较大小，不需要移动，时间复杂度趋近于 O(n)
+- 如果只想得到 1000 个元素组成的序列中第 5 个最小元素之前的部分排序的序列，用堆排序方法最快
+- 插入排序和优化后的冒泡在最优情况（有序）都只用比较 n-1 次
+- 对长度为 n 的线性表作快速排序，在最坏情况下，比较次数为 `n(n-1)/2`。
+- 下标从 1 开始，在含有 n 个关键字的小根堆（堆顶元素最小）中，关键字最大的记录有可能存储在 `[n/2]+2` 位置上。 因为小根堆中最大的数一定是放在叶子节点上，堆本身是个完全二叉树，完全二叉树的叶子节点的位置大于 `[n/2]`
+- 拓扑排序的算法，每次都选择入度为 0 的结点从图中删去，并从图中删除该顶点和所有以它为起点的有向边。
+- 任何一个基于"比较"的内部排序的算法，若对 n 个元素进行排序，则在最坏情况下所需的比较次数 k 满足 `2^k > n!`， 时间下界为 `O(nlogn)`
+- m 个元素 k 路归并的归并趟数 `s=logk(m)`，代入数据：`logk(100)≦3`
+- 对 n 个记录的线性表进行快速排序为减少算法的递归深度，每次分区后，先处理较短的部分
+- 在用邻接表表示图时，拓扑排序算法时间复杂度为 O(n+e)
 
 ## 树
 
 ### 二叉树相关性质
 
-+ 节点的度：一个节点含有的子树的个数称为该节点的度；
-+ 叶节点或终端节点：度为零的节点；
-+ 节点的层次：从根开始定义起，根为第 1 层，根的子节点为第 2 层，以此类推。
-+ 树的高度或深度：树中节点的最大层次。
-+ 在非空二叉树中，第 i 层的结点总数不超过 2^(i-1)，i>=1。
-+ 对于任意一棵二叉树，如果其叶结点数为 N0，而度数为 2 的结点总数为N2，则 N0 = N2+1；
-+ 给定 N 个节点，能构成 h(N) 种不同的二叉树。h(N)为卡特兰数的第 N项。(2n)!/(n!(n+1)!)。
-+ 二叉树的前序遍历，首先访问根结点，然后遍历左子树，最后遍历右子树。
-+ 二叉树的中序遍历，首先遍历左子树，然后访问根结点，最后遍历右子树。简记左-根-右。
-+ 二叉树的后序遍历，首先遍历左子树，然后遍历右子树，最后访问根结点。简记左-右-根。
-+ 二叉树是非线性数据结构，但是顺序存储结构和链式存储结构都能存储。
-+ 一个带权的无向连通图的最小生成树的权值之和是唯一的。
-+ 只有一个结点的二叉树的度为 0 。
-+ 二叉树的度是以节点的最大的度数定义的。
-+ 树的后序遍历序列等同于该树对应的二叉树的中序序列。
-+ 树的先序遍历序列等同于该树对应的二叉树的先序序列。
-+ **线索二叉树的线索**实际上指向的是相应遍历序列特定结点的前驱结点和后继结点，所以先写出二叉树的中序遍历序列： debxac，中序遍历中在x 左边和右边的字符，就是它在中序线索化的左、右线索，即 b、a 。
-+ 递归式的先序遍历一个 n 节点，深度为 d 的二叉树，需要栈空间的大小为 O（d），因为二叉树并不一定是平衡的， 也就是深度 `d！=logn`，有可能 `d>>logn`。所以栈大小应该是 `O（d）`
-+ 一棵具有 N 个结点的二叉树的前序序列和后序序列正好相反 ，则该二叉树一定满足该二叉树只有左子树或只有右子树， 即该二叉树一定是一条链（二叉树的高度为 N，高度等于结点数）。
-+ **引入二叉线索树的目的是加快查找结点的前驱或后继的速度**。
-+ 二叉树线索化后，先序线索化与后序线索化最多有 1 个空指针域，而中序线索化最多有 2 个空指针域。
-+ **不管是几叉树，节点数等于=分叉数+1**
-+ 任何一棵二叉树的叶子结点在先序、中序和后序遍历中的相对次序不发生改变。
-+ 
+- 节点的度：一个节点含有的子树的个数称为该节点的度；
+- 叶节点或终端节点：度为零的节点；
+- 节点的层次：从根开始定义起，根为第 1 层，根的子节点为第 2 层，以此类推。
+- 树的高度或深度：树中节点的最大层次。
+- 在非空二叉树中，第 i 层的结点总数不超过 2^(i-1)，i>=1。
+- 对于任意一棵二叉树，如果其叶结点数为 N0，而度数为 2 的结点总数为 N2，则 N0 = N2+1；
+- 给定 N 个节点，能构成 h(N) 种不同的二叉树。h(N)为卡特兰数的第 N 项。(2n)!/(n!(n+1)!)。
+- 二叉树的前序遍历，首先访问根结点，然后遍历左子树，最后遍历右子树。
+- 二叉树的中序遍历，首先遍历左子树，然后访问根结点，最后遍历右子树。简记左-根-右。
+- 二叉树的后序遍历，首先遍历左子树，然后遍历右子树，最后访问根结点。简记左-右-根。
+- 二叉树是非线性数据结构，但是顺序存储结构和链式存储结构都能存储。
+- 一个带权的无向连通图的最小生成树的权值之和是唯一的。
+- 只有一个结点的二叉树的度为 0 。
+- 二叉树的度是以节点的最大的度数定义的。
+- 树的后序遍历序列等同于该树对应的二叉树的中序序列。
+- 树的先序遍历序列等同于该树对应的二叉树的先序序列。
+- **线索二叉树的线索**实际上指向的是相应遍历序列特定结点的前驱结点和后继结点，所以先写出二叉树的中序遍历序列： debxac，中序遍历中在 x 左边和右边的字符，就是它在中序线索化的左、右线索，即 b、a 。
+- 递归式的先序遍历一个 n 节点，深度为 d 的二叉树，需要栈空间的大小为 O（d），因为二叉树并不一定是平衡的， 也就是深度 `d！=logn`，有可能 `d>>logn`。所以栈大小应该是 `O（d）`
+- 一棵具有 N 个结点的二叉树的前序序列和后序序列正好相反 ，则该二叉树一定满足该二叉树只有左子树或只有右子树， 即该二叉树一定是一条链（二叉树的高度为 N，高度等于结点数）。
+- **引入二叉线索树的目的是加快查找结点的前驱或后继的速度**。
+- 二叉树线索化后，先序线索化与后序线索化最多有 1 个空指针域，而中序线索化最多有 2 个空指针域。
+- **不管是几叉树，节点数等于=分叉数+1**
+- 任何一棵二叉树的叶子结点在先序、中序和后序遍历中的相对次序不发生改变。
+-
+
 ### 满二叉树
 
 对于一棵二叉树，如果每一个非叶子节点都存在左右子树，并且二叉树中所有的叶子节点都在同一层中，这样的二叉树称为满 二叉树
@@ -413,9 +414,9 @@ function radixSort(array) {
 
 性质：
 
-+ 具有 n 个结点的完全二叉树的深度为 `K =[log2n」+1`(取下整数)
-+ 有 N 个结点的完全二叉树各结点如果用顺序方式存储，则结点之间有如下关系： 若 I 为结点编号（从 1 开始编号）则 如果 I>1，则其父结点的编号为 I/2
-+ 完全二叉树，如果 `2 * I <= N`，则其左儿子（即左子树的根结点）的编号为 `2 * I`；若 `2 * I > N`，则无左儿子；如 果 `2 * I + 1 <= N`，则其右儿子的结点编号为 `2 * I + 1`；若 `2 * I + 1 > N`，则无右儿子
+- 具有 n 个结点的完全二叉树的深度为 `K =[log2n」+1`(取下整数)
+- 有 N 个结点的完全二叉树各结点如果用顺序方式存储，则结点之间有如下关系： 若 I 为结点编号（从 1 开始编号）则 如果 I>1，则其父结点的编号为 I/2
+- 完全二叉树，如果 `2 * I <= N`，则其左儿子（即左子树的根结点）的编号为 `2 * I`；若 `2 * I > N`，则无左儿子；如 果 `2 * I + 1 <= N`，则其右儿子的结点编号为 `2 * I + 1`；若 `2 * I + 1 > N`，则无右儿子
 
 ### 平衡二叉查找树（AVL）
 
@@ -430,20 +431,326 @@ function radixSort(array) {
 
 ### B-树
 
-B-树**主要用于文件系统以及部分数据库索引**，如 MongoDB。使用 B-树来作为数据库的索引主要是为了减少查找是磁盘的 I/O 次数。试想，如果我们使用二叉查找树来作为索引，那么查找次数的最坏情况等于二叉查找树的高度，由于索引存储在磁盘中， 我们每次都只能加载对应索引的磁盘页进入内存中比较，那么磁盘的 I/O 次数就等于索引树的高度。所以采用一种办法来减少 索引树的高度是提高索引效率的关键
+B-树**主要用于文件系统以及部分数据库索引**，如 MongoDB。使用 B-树来作为数据库的索引**主要是为了减少查找是磁盘的 I/O 次数**。试想，如果我们使用二叉查找树来作为索引，那么**查找次数的最坏情况等于二叉查找树的高度**，由于**索引存储在磁盘中**， 我们每次都只能加载对应索引的磁盘页进入内存中比较，那么磁盘的 I/O 次数就等于索引树的高度。所以采用一种办法来减少 索引树的高度是提高索引效率的关键
 
-B-树是一种**多路平衡查找树**，它的每一个节点最多包含 K 个子节点，K 被称为B-树的阶，K 的大小取决于磁盘页的大小。每 个节点中的元素从小到大排列，节点当中 k-1 个元素正好是 k 个孩子包含的元素的值域分划。简单来说就是以前一个磁盘页 只存储一个索引的值，但 B-树中一个磁盘页中存储了多个索引的值，因此在相同的比较范围内，B-树相对于一般的二叉查找树 的高度更小。其实它的主要目的就是每次尽可能多的将索引值加载入内存中进行比较，以此来减少磁盘的 I/O 次数，其实就查 找次数而言，和二叉查找树比较差不了多少，只是说这个比较过程是在内存中完成的，速度更快而已。
+B-树是一种**多路平衡查找树**，它的每一个节点最多包含 K 个子节点，K 被称为 B-树的阶，K 的大小取决于磁盘页的大小。每个节点中的元素从小到大排列，节点当中 k-1 个元素正好是 k 个孩子包含的元素的值域分划。简单来说就是以前一个磁盘页 只存储一个索引的值，但 B-树中一个磁盘页中存储了多个索引的值，因此在相同的比较范围内，B-树相对于一般的二叉查找树 的高度更小。**其实它的主要目的就是每次尽可能多的将索引值加载入内存中进行比较，以此来减少磁盘的 I/O 次数，其实就查 找次数而言，和二叉查找树比较差不了多少，只是说这个比较过程是在内存中完成的，速度更快而已**。
 
 ### B+树
 
+**B+ 树相对于 B-树有着更好的查找性能**，根据 B-树我们可以知道，要想加快索引速度的方法就是尽量减少磁盘 I/O 的次数。 B+ 树相对于 B-的主要变化是，每个中间节点中不再包含卫星数据，只有叶子节点包含卫星数据，每个父节点都出现在子节点 中，叶子节点依次相连，形成一个顺序链表。中间节点不包含卫星数据，只用来作为索引使用，这意味着每一个磁盘页中能够 包含更多的索引值。因此 **B+ 树的高度相对于 B-来说更低**，所以磁盘的 I/O 次数更少。由于叶子节点依次相连，并且包含 了父节点，所以可以通过叶子节点来找到对应的值。同时**B+ 树所有查询都要查找到叶子节点，查询性能比 B-树稳定**
+
 ### 数据库索引
+
+**数据库以 B 树或者 B+ 树格式来储存的数据的**，一张表是根据主键来构建的树的结构。因此如果想查找其他字段，就需要建 立索引，我对于索引的理解是它就是以某个字段为关键字的 B 树文件，通过这个 B 树文件就能够提高数据查找的效率。但是 由于我们需要维护的是平衡树的结构，因此对于数据的写入、修改、删除就会变慢，因为这有可能会涉及到树的平衡调整。
 
 ### 红黑树
 
+红黑树是一种自平衡的二叉查找树，它主要是为了解决不平衡的二叉查找树的查找效率不高的缺点。红黑树保证了从根到叶子 节点的最长路径不会超过最短路径的两倍。
+
+红黑树的有具体的规则：
+
+- 节点是红色或黑色。
+- 根节点是黑色。
+- 每个叶子节点都是黑色的空节点（NIL 节点）。
+- 每个红色节点的两个子节点都是黑色。(从每个叶子到根的所有路径上不能有两个连续的红色节点)
+- 从任一节点到其每个叶子的所有路径都包含相同数目的黑色节点。
+
+当红黑树发生删除和插入导致红黑树不满足这些规则时，需要通过处理，使其重新满足这些规则。
+
 ### Huffman 树
+
+给定 n 权值作为 n 个叶子节点，构造一棵二叉树，若这棵二叉树的带权路径长度达到最小，则称这样的二叉树为最优二叉 树，也称为 Huffman 树。
+
+利用 Huffman 树对每一个字符编码，该编码又称为 Huffman 编码，Huffman 编码是一种前缀编码，即一个字符的编码 不是另一个字符编码的前缀。
+
+性质：
+
+- 对应一组权重构造出来的 Huffman 树一般不是唯一的
+- Huffman 树具有最小的带权路径长度
+- Huffman 树中没有度为 1 的结点
+- 哈夫曼树是带权路径长度最短的树，路径上权值较大的结点离根较近
+- Huffman 树的带权路径长度 WPL 等于各叶子结点的带权路径长度之和
 
 ### 二叉查找树
 
+二叉查找树是一种特殊的二叉树，相对较小的值保存在左节点中，较大的值保存在右节点中，这一特性使得查找的效率很高， 对于数值型和非数值型数据，比如字母和字符串，都是如此
+
+```js
+// 节点类，树的节点
+class Node {
+  constructor(value) {
+    this.value = value;
+    this.left = null;
+    this.right = null;
+  }
+  show() {
+    console.log(this.value);
+  }
+}
+```
+
+实现二叉查找树类：
+
+```js
+class BinarySearchTree {
+  constructor() {
+    this.root = null;
+  }
+}
+```
+
+实现树的节点插入方法
+
+节点插入的基本思想是将插入节点和当前节点做比较，如果比当前节点值小，并且没有左子树，那么将节点作为左叶子节点， 否则继续和左子树进行比较。如果比当前节点值大，并且没有右子树，则将节点作为右叶子节点，否则继续和右子树进行比较。 循环这个过程直到找到合适的插入位置
+
+```js
+class BinarySearchTree {
+  constructor() {
+    this.root = null;
+  }
+  insert(value) {
+    let newNode = new Node(value);
+    // 判断根节点是否为空，如果不为空则递归插入到树中
+    if (this.root === null) {
+      this.root = newNode;
+    } else {
+      this.insertNode(this.root, newNode);
+    }
+  }
+  insertNode(node, newNode) {
+    // 将插入节点的值与当前节点的进行比较，如果比当前节点小，则递归判断左子树，如果比当前节点大，则递归判断右子树。
+    if (newNode.value < node.value) {
+      if (node.left === null) {
+        node.left = newNode;
+      } else {
+        this.insertNode(node.left, newNode);
+      }
+    } else {
+      if (node.right === null) {
+        node.right = newNode;
+      } else {
+        this.insertNode(node.right, newNode);
+      }
+    }
+  }
+
+  // 先序遍历通过递归实现
+  // 先序遍历则先打印当前节点，再递归打印左子节点和右子节点。
+  preOrderTraverse() {
+    this.preOrderTraverseNode(this.root);
+  }
+  preOrderTraverseNode(node) {
+    if (node !== null) {
+      node.show();
+      this.preOrderTraverseNode(node.left);
+      this.preOrderTraverseNode(node.right);
+    }
+  }
+  // 中序遍历通过递归实现
+  // 中序遍历则先递归打印左子节点，再打印当前节点，最后再递归打印右子节点。
+  inOrderTraverse() {
+    this.inOrderTraverseNode(this.root);
+  }
+  inOrderTraverseNode(node) {
+    if (node !== null) {
+      this.inOrderTraverseNode(node.left);
+      node.show();
+      this.inOrderTraverseNode(node.right);
+    }
+  }
+  // 后序遍历通过递归实现
+  // 后序遍历则先递归打印左子节点和右子节点，最后再打印当前节点。
+  postOrderTraverse() {
+    this.postOrderTraverseNode(this.root);
+  }
+  postOrderTraverseNode(node) {
+    if (node !== null) {
+      this.postOrderTraverseNode(node.left);
+      this.postOrderTraverseNode(node.right);
+      node.show();
+    }
+  }
+
+  // 先序遍历通过循环实现
+  // 通过栈来实现循环先序遍历，首先将根节点入栈。然后进入循环，每次循环开始，当前节点出栈，打印当前节点，然后将
+  // 右子节点入栈，再将左子节点入栈，然后进入下一循环，直到栈为空结束循环。
+  preOrderTraverseByStack() {
+    let stack = [];
+    // 现将根节点入栈，开始遍历
+    stack.push(this.root);
+    while (stack.length > 0) {
+      // 从栈中获取当前节点
+      let node = stack.pop();
+      // 执行节点操作
+      node.show();
+      // 判断节点是否还有左右子节点，如果存在则加入栈中，注意，由于中序遍历先序遍历是先访问根
+      // 再访问左和右子节点，因此左右子节点的入栈顺序应该是反过来的
+      if (node.right) {
+        stack.push(node.right);
+      }
+      if (node.left) {
+        stack.push(node.left);
+      }
+    }
+  }
+  // 中序遍历通过循环实现
+  // 中序遍历先将所有的左子节点入栈，如果左子节点为 null 时，打印栈顶元素，然后判断该元素是否有右子树，如果有
+  // 则将右子树作为起点重复上面的过程，一直循环直到栈为空并且节点为空时。
+  inOrderTraverseByStack() {
+    let stack = [],
+      node = this.root;
+    // 中序遍历是先左再根最后右
+    // 所以首先应该先把最左边节点遍历到底依次 push 进栈
+    // 当左边没有节点时，就打印栈顶元素，然后寻找右节点
+    while (stack.length > 0 || node) {
+      if (node) {
+        stack.push(node);
+        node = node.left;
+      } else {
+        node = stack.pop();
+        node.show();
+        node = node.right;
+      }
+    }
+  }
+  // 后序遍历通过循环来实现
+  // 使用两个栈来是实现，先将根节点放入栈 1 中，然后进入循环，每次循环将栈顶元素加入栈 2，再依次将左节点和右节点依次
+  // 加入栈 1 中，然后进入下一次循环，直到栈 1 的长度为 0。最后再循环打印栈 2 的值。
+  postOrderTraverseByStack() {
+    let stack1 = [],
+      stack2 = [],
+      node = null;
+    // 后序遍历是先左再右最后根
+    // 所以对于一个栈来说，应该先 push 根节点
+    // 然后 push 右节点，最后 push 左节点
+    stack1.push(this.root);
+    while (stack1.length > 0) {
+      node = stack1.pop();
+      stack2.push(node);
+      if (node.left) {
+        stack1.push(node.left);
+      }
+      if (node.right) {
+        stack1.push(node.right);
+      }
+    }
+    while (stack2.length > 0) {
+      node = stack2.pop();
+      node.show();
+    }
+  }
+  // 寻找最小值，在最左边的叶子节点上
+  findMinNode(root) {
+    let node = root;
+    while (node && node.left) {
+      node = node.left;
+    }
+    return node;
+  }
+  // 寻找最大值，在最右边的叶子节点上
+  findMaxNode(root) {
+    let node = root;
+    while (node && node.right) {
+      node = node.right;
+    }
+    return node;
+  }
+  // 寻找特定值
+  find(value) {
+    return this.findNode(this.root, value);
+  }
+  findNode(node, value) {
+    if (node === null) {
+      return node;
+    }
+    if (value < node.value) {
+      return this.findNode(node.left, value);
+    } else if (value > node.value) {
+      return this.findNode(node.right, value);
+    } else {
+      return node;
+    }
+  }
+  // 移除指定值节点
+  remove(value) {
+    this.removeNode(this.root, value);
+  }
+  removeNode(node, value) {
+    if (node === null) {
+      return node;
+    }
+    // 寻找指定节点
+    if (value < node.value) {
+      node.left = this.removeNode(node.left, value);
+      return node;
+    } else if (value > node.value) {
+      node.right = this.removeNode(node.right, value);
+      return node;
+    } else {
+      // 找到节点
+      // 第一种情况——没有叶节点
+      if (node.left === null && node.right === null) {
+        node = null;
+        return node;
+      }
+      // 第二种情况——一个只有一个子节点的节点，将节点替换为节点的子节点
+      if (node.left === null) {
+        node = node.right;
+        return node;
+      } else if (node.right === null) {
+        node = node.left;
+      }
+      // 第三种情况——一个有两个子节点的节点，去右子树中找到最小的节点，用它的值来替 换当前节点;
+      // 的值，保持树的特性，然后将替换的节点去掉
+      let aux = this.findMinNode(node.right);
+      node.value = aux.value;
+      node.right = this.removeNode(node.right, aux);
+      return node;
+    }
+  }
+}
+```
+
 ### 求解二叉树中两个节点的最近公共祖先节点
 
+求解二叉树中的两个节点的最近公共祖先节点可以分为三种情况来考虑
 
+（1）该二叉树为搜索二叉树
+
+解决办法，首先从根节点开始遍历。如果根节点的值比两个节点的值都大的情况下，则说明两个节点的共同祖先存在于根节点的左子树中，因此递归遍历左子树。反之，则遍历右子树。当当前节点的值比其中一个节点的值大，比其中一个节点的值小时，该节点则为两个节点的最近公共祖先节点。
+
+（2）该二叉树为普通二叉树，但是每个节点含有指向父节点的指针。
+
+通过指向父节点的指针，我们可以通过节点得到它的所有父节点，该父节点列表可以看做是一个链表，因此求两个节点的最近公共祖先节点就可以看做是求两个链表的最近公共节点，以此来找到两个节点的最近公共祖先节点。
+
+（3）该二叉树为普通二叉树，节点不含有指向父节点的指针。
+
+这种情况下，我们可以从根节点出发，分别得到根节点到两个节点的路径。然后遍历两条路径，直到遇到第一个不相同的节点为止，这个时候该节点前面的那个节点则为两个节点的最近公共祖先节点。
+
+## 链表
+
+### 反转单向链表
+
+需要将一个单向链表反转。思路很简单，使用三个变量分别表示当前节点和当前节点的前后节点，虽然这题很简单，但是却是 一道面试常考题。思路是从头节点往后遍历，先获取下一个节点，然后将当前节点的 next 设置为前一个节点，然后再继续循环
+
+```js
+var reverseList = function (head) {
+  // 判断下变量边界问题
+  if (!head || !head.next) return head;
+  // 初始设置为空，因为第一个节点反转后就是尾部，尾部节点指向 null
+  let pre = null;
+  let current = head;
+  let next;
+  // 判断当前节点是否为空
+  // 不为空就先获取当前节点的下一节点
+  // 然后把当前节点的 next 设为上一个节点
+  // 然后把 current 设为下一个节点，pre 设为当前节点
+  while (current) {
+    next = current.next;
+    current.next = pre;
+    pre = current;
+    current = next;
+  }
+  return pre;
+};
+```
